tests/response/hasHeader.out
Fatal error: Uncaught Error: Call to undefined method SapiResponse::hasHeader() in /Users/pmjones/Code/pmjones/php-request/tests/response/hasHeader.php:4
Stack trace:
#0 {main}
  thrown in /Users/pmjones/Code/pmjones/php-request/tests/response/hasHeader.php on line 4